Improve refactoring of img package