@@ -15,10 +15,7 @@ import java.text.DecimalFormatSymbols;
 import java.time.LocalDate;
 import java.time.temporal.ChronoUnit;
 import java.time.temporal.TemporalAccessor;
-import java.util.Arrays;
-import java.util.Date;
-import java.util.Locale;
-import java.util.Objects;
+import java.util.*;
 import java.util.stream.Collectors;
 import java.util.stream.DoubleStream;
 import java.util.stream.IntStream;
@@ -38,8 +35,48 @@ import org.weasis.core.util.StringUtil;
  *
  * @author Nicolas Roduit
  */
-public class DicomUtils {
+public final class DicomUtils {
   private static final Logger LOGGER = LoggerFactory.getLogger(DicomUtils.class);
+
+  // Video transfer syntax UIDs
+  private static final Set<String> VIDEO_TRANSFER_SYNTAXES =
+      Set.of(
+          UID.MPEG2MPML,
+          UID.MPEG2MPMLF,
+          UID.MPEG2MPHL,
+          UID.MPEG2MPHLF,
+          UID.MPEG4HP41,
+          UID.MPEG4HP41F,
+          UID.MPEG4HP41BD,
+          UID.MPEG4HP41BDF,
+          UID.MPEG4HP422D,
+          UID.MPEG4HP422DF,
+          UID.MPEG4HP423D,
+          UID.MPEG4HP423DF,
+          UID.MPEG4HP42STEREO,
+          UID.MPEG4HP42STEREOF,
+          UID.HEVCMP51,
+          UID.HEVCM10P51);
+
+  // JPEG 2000 transfer syntax UIDs
+  private static final Set<String> JPEG2000_TRANSFER_SYNTAXES =
+      Set.of(
+          UID.JPEG2000Lossless,
+          UID.JPEG2000,
+          UID.JPEG2000MCLossless,
+          UID.JPEG2000MC,
+          UID.HTJ2KLossless,
+          UID.HTJ2KLosslessRPCL,
+          UID.HTJ2K);
+
+  // Native (uncompressed) transfer syntax UIDs
+  private static final Set<String> NATIVE_TRANSFER_SYNTAXES =
+      Set.of(UID.ImplicitVRLittleEndian, UID.ExplicitVRLittleEndian, UID.ExplicitVRBigEndian);
+
+  // Date tags to search for patient age calculation (in order of preference)
+  private static final int[] STUDY_DATE_TAGS = {
+    Tag.ContentDate, Tag.AcquisitionDate, Tag.DateOfSecondaryCapture, Tag.SeriesDate, Tag.StudyDate
+  };
 
   private DicomUtils() {}
 
@@ -50,26 +87,7 @@ public class DicomUtils {
    * @return true if the UID represents a video transfer syntax, false otherwise
    */
   public static boolean isVideo(String uid) {
-    return switch (uid) {
-      case UID.MPEG2MPML,
-              UID.MPEG2MPMLF,
-              UID.MPEG2MPHL,
-              UID.MPEG2MPHLF,
-              UID.MPEG4HP41,
-              UID.MPEG4HP41F,
-              UID.MPEG4HP41BD,
-              UID.MPEG4HP41BDF,
-              UID.MPEG4HP422D,
-              UID.MPEG4HP422DF,
-              UID.MPEG4HP423D,
-              UID.MPEG4HP423DF,
-              UID.MPEG4HP42STEREO,
-              UID.MPEG4HP42STEREOF,
-              UID.HEVCMP51,
-              UID.HEVCM10P51 ->
-          true;
-      default -> false;
-    };
+    return VIDEO_TRANSFER_SYNTAXES.contains(uid);
   }
 
   /**
@@ -79,17 +97,7 @@ public class DicomUtils {
    * @return true if the UID represents a JPEG 2000 transfer syntax, false otherwise
    */
   public static boolean isJpeg2000(String uid) {
-    return switch (uid) {
-      case UID.JPEG2000Lossless,
-              UID.JPEG2000,
-              UID.JPEG2000MCLossless,
-              UID.JPEG2000MC,
-              UID.HTJ2KLossless,
-              UID.HTJ2KLosslessRPCL,
-              UID.HTJ2K ->
-          true;
-      default -> false;
-    };
+    return JPEG2000_TRANSFER_SYNTAXES.contains(uid);
   }
 
   /**
@@ -99,10 +107,7 @@ public class DicomUtils {
    * @return true if the UID represents a native transfer syntax, false otherwise
    */
   public static boolean isNative(String uid) {
-    return switch (uid) {
-      case UID.ImplicitVRLittleEndian, UID.ExplicitVRLittleEndian, UID.ExplicitVRBigEndian -> true;
-      default -> false;
-    };
+    return NATIVE_TRANSFER_SYNTAXES.contains(uid);
   }
 
   /**
@@ -131,20 +136,20 @@ public class DicomUtils {
       return StringUtil.EMPTY_STRING;
     }
 
-    String str = convertValueToString(value, locale);
+    var stringValue = convertValueToString(value, locale);
 
     if (StringUtil.hasText(format) && !"$V".equals(format.trim())) {
-      return formatValue(str, isDecimalType(value), format);
+      return formatValue(stringValue, isDecimalType(value), format);
     }
 
-    return str == null ? StringUtil.EMPTY_STRING : str;
+    return Objects.requireNonNullElse(stringValue, StringUtil.EMPTY_STRING);
   }
 
   private static String convertValueToString(Object value, Locale locale) {
     if (value instanceof String string) {
       return string;
     } else if (value instanceof String[] strings) {
-      return String.join("\\", Arrays.asList(strings));
+      return String.join("\\", strings);
     } else if (value instanceof TemporalAccessor temporal) {
       return DateTimeUtils.formatDateTime(temporal, locale);
     } else if (value instanceof TemporalAccessor[] temporals) {
@@ -165,7 +170,7 @@ public class DicomUtils {
   }
 
   private static boolean isDecimalType(Object value) {
-    return value instanceof Float || value instanceof Double;
+    return value instanceof Double || value instanceof Float;
   }
 
   /**
@@ -176,90 +181,104 @@ public class DicomUtils {
    * @param format the format string containing $V placeholder
    * @return the formatted string
    */
-  protected static String formatValue(String value, boolean decimal, String format) {
-    String str = value;
-    int index = format.indexOf("$V");
-    int fmLength = 2;
-    if (index == -1) {
-      return str;
+  static String formatValue(String value, boolean decimal, String format) {
+    var placeholders = PlaceholderParser.parseFormat(format);
+    if (placeholders.isEmpty()) {
+      return value;
     }
 
-    FormatResult result = processFormatSpecifiers(str, decimal, format, index, fmLength);
-    str = result.value();
-    fmLength = result.length();
-
-    return buildFormattedString(str, format, index, fmLength);
+    var result = format;
+    for (var placeholder : placeholders) {
+      var processedValue = placeholder.process(value, decimal);
+      result = result.replace(placeholder.fullMatch(), processedValue);
+    }
+    return result;
   }
 
-  private static FormatResult processFormatSpecifiers(
-      String value, boolean decimal, String format, int index, int fmLength) {
-    boolean hasFormatSpecifier =
-        format.length() > index + fmLength && format.charAt(index + fmLength) == ':';
+  /** Represents a format placeholder with its type and parameters. */
+  private record Placeholder(PlaceholderType type, String parameter, String fullMatch) {
 
-    if (!hasFormatSpecifier) {
-      return new FormatResult(value, fmLength);
-    }
-
-    fmLength++; // skip ':'
-    char specifier = format.charAt(index + fmLength);
-    fmLength++;
-
-    if (specifier == 'f' && decimal) {
-      return processDecimalFormat(value, format, index, fmLength);
-    } else if (specifier == 'l') {
-      return processLengthLimit(value, format, index, fmLength);
-    } else {
-      return new FormatResult(value, fmLength);
+    String process(String value, boolean isDecimal) {
+      return type.process(value, parameter, isDecimal);
     }
   }
 
-  private static FormatResult processDecimalFormat(
-      String value, String format, int index, int fmLength) {
-    String pattern = getPattern(index + fmLength, format);
-    if (pattern == null) {
-      return new FormatResult(value, fmLength);
-    }
-    try {
-      String formattedValue =
-          new DecimalFormat(pattern, DecimalFormatSymbols.getInstance())
-              .format(Double.parseDouble(value));
-      return new FormatResult(formattedValue, fmLength + pattern.length() + 2);
-    } catch (NumberFormatException e) {
-      LOGGER.warn("Cannot apply pattern to decimal value", e);
-      return new FormatResult(value, fmLength + pattern.length() + 2);
-    }
+  /** Types of supported placeholders. */
+  private enum PlaceholderType {
+    SIMPLE {
+      @Override
+      String process(String value, String parameter, boolean isDecimal) {
+        return value;
+      }
+    },
+
+    DECIMAL_FORMAT {
+      @Override
+      String process(String value, String parameter, boolean isDecimal) {
+        if (!isDecimal || parameter == null) {
+          return value;
+        }
+        try {
+          var formatter = new DecimalFormat(parameter, DecimalFormatSymbols.getInstance());
+          return formatter.format(Double.parseDouble(value));
+        } catch (NumberFormatException e) {
+          LOGGER.warn("Cannot apply decimal pattern '{}' to value '{}'", parameter, value);
+          return value;
+        }
+      }
+    },
+
+    LENGTH_LIMIT {
+      @Override
+      String process(String value, String parameter, boolean isDecimal) {
+        if (parameter == null) {
+          return value;
+        }
+        try {
+          var limit = Integer.parseInt(parameter);
+          return value.length() > limit ? value.substring(0, limit) + "..." : value;
+        } catch (NumberFormatException e) {
+          LOGGER.warn("Cannot parse length limit '{}' for value '{}'", parameter, value);
+          return value;
+        }
+      }
+    };
+
+    abstract String process(String value, String parameter, boolean isDecimal);
   }
 
-  private static FormatResult processLengthLimit(
-      String value, String format, int index, int fmLength) {
-    String pattern = getPattern(index + fmLength, format);
-    if (pattern == null) {
-      return new FormatResult(value, fmLength);
-    }
-    try {
-      int limit = Integer.parseInt(pattern);
-      String limitedValue = value.length() > limit ? value.substring(0, limit) + "..." : value;
-      return new FormatResult(limitedValue, fmLength + pattern.length() + 2);
-    } catch (NumberFormatException e) {
-      LOGGER.warn("Cannot apply pattern to limit value", e);
-      return new FormatResult(value, fmLength + pattern.length() + 2);
-    }
-  }
+  /** Parser for format placeholders. */
+  private static final class PlaceholderParser {
+    private static final String PLACEHOLDER_PATTERN = "\\$V(?::([fl])\\$([^$]*)\\$)?";
+    private static final java.util.regex.Pattern PATTERN =
+        java.util.regex.Pattern.compile(PLACEHOLDER_PATTERN);
 
-  private static String buildFormattedString(String value, String format, int index, int fmLength) {
-    StringBuilder sb = new StringBuilder();
-    sb.append(format, 0, index);
-    sb.append(value);
-    if (format.length() > index + fmLength) {
-      sb.append(format.substring(index + fmLength));
-    }
-    return sb.toString();
-  }
+    static java.util.List<Placeholder> parseFormat(String format) {
+      var placeholders = new java.util.ArrayList<Placeholder>();
+      var matcher = PATTERN.matcher(format);
 
-  private static String getPattern(int startIndex, String format) {
-    int beginIndex = format.indexOf('$', startIndex);
-    int endIndex = format.indexOf('$', startIndex + 2);
-    return (beginIndex == -1 || endIndex == -1) ? null : format.substring(beginIndex + 1, endIndex);
+      while (matcher.find()) {
+        var fullMatch = matcher.group(0);
+        var specifier = matcher.group(1);
+        var parameter = matcher.group(2);
+
+        var type = determineType(specifier);
+        placeholders.add(new Placeholder(type, parameter, fullMatch));
+      }
+
+      return placeholders;
+    }
+
+    private static PlaceholderType determineType(String specifier) {
+      if (specifier == null) {
+        return PlaceholderType.SIMPLE;
+      }
+      return switch (specifier) {
+        case "f" -> PlaceholderType.DECIMAL_FORMAT;
+        case "l" -> PlaceholderType.LENGTH_LIMIT;
+        default -> PlaceholderType.SIMPLE;
+      };
+    }
   }
 
   /**
@@ -274,32 +293,19 @@ public class DicomUtils {
       return null;
     }
 
-    String[] strings = dicom.getStrings(tag);
+    var strings = dicom.getStrings(tag);
     if (strings == null || strings.length == 0) {
       return null;
     }
     return strings.length == 1 ? strings[0] : String.join("\\", strings);
   }
 
-  /**
-   * Extracts a string array from a DICOM element.
-   *
-   * @param dicom the DICOM attributes
-   * @param tag the DICOM tag
-   * @return the string array or null if not present
-   */
+  /** Extracts a string array from a DICOM element. */
   public static String[] getStringArrayFromDicomElement(Attributes dicom, int tag) {
     return getStringArrayFromDicomElement(dicom, tag, (String) null);
   }
 
-  /**
-   * Extracts a string array from a DICOM element with private creator ID.
-   *
-   * @param dicom the DICOM attributes
-   * @param tag the DICOM tag
-   * @param privateCreatorID the private creator ID (can be null)
-   * @return the string array or null if not present
-   */
+  /** Extracts a string array from a DICOM element with private creator ID. */
   public static String[] getStringArrayFromDicomElement(
       Attributes dicom, int tag, String privateCreatorID) {
     if (dicom == null || !dicom.containsValue(tag)) {
@@ -308,45 +314,23 @@ public class DicomUtils {
     return dicom.getStrings(privateCreatorID, tag);
   }
 
-  /**
-   * Extracts a string array from a DICOM element with default value.
-   *
-   * @param dicom the DICOM attributes
-   * @param tag the DICOM tag
-   * @param defaultValue the default value to return if not present
-   * @return the string array or default value
-   */
+  /** Extracts a string array from a DICOM element with default value. */
   public static String[] getStringArrayFromDicomElement(
       Attributes dicom, int tag, String[] defaultValue) {
     return getStringArrayFromDicomElement(dicom, tag, null, defaultValue);
   }
 
-  /**
-   * Extracts a string array from a DICOM element with private creator ID and default value.
-   *
-   * @param dicom the DICOM attributes
-   * @param tag the DICOM tag
-   * @param privateCreatorID the private creator ID (can be null)
-   * @param defaultValue the default value to return if not present
-   * @return the string array or default value
-   */
+  /** Extracts a string array from a DICOM element with private creator ID and default value. */
   public static String[] getStringArrayFromDicomElement(
       Attributes dicom, int tag, String privateCreatorID, String[] defaultValue) {
     if (dicom == null || !dicom.containsValue(tag)) {
       return defaultValue;
     }
-    String[] val = dicom.getStrings(privateCreatorID, tag);
-    return (val == null || val.length == 0) ? defaultValue : val;
+    var values = dicom.getStrings(privateCreatorID, tag);
+    return (values == null || values.length == 0) ? defaultValue : values;
   }
 
-  /**
-   * Extracts a date from a DICOM element.
-   *
-   * @param dicom the DICOM attributes
-   * @param tag the DICOM tag
-   * @param defaultValue the default value to return if not present
-   * @return the date or default value
-   */
+  /** Extracts a date from a DICOM element. */
   public static Date getDateFromDicomElement(Attributes dicom, int tag, Date defaultValue) {
     if (dicom == null || !dicom.containsValue(tag)) {
       return defaultValue;
@@ -354,22 +338,14 @@ public class DicomUtils {
     return dicom.getDate(tag, defaultValue);
   }
 
-  /**
-   * Extracts a date array from a DICOM element with private creator ID.
-   *
-   * @param dicom the DICOM attributes
-   * @param tag the DICOM tag
-   * @param privateCreatorID the private creator ID (can be null)
-   * @param defaultValue the default value to return if not present
-   * @return the date array or default value
-   */
+  /** Extracts a date array from a DICOM element with private creator ID. */
   public static Date[] getDatesFromDicomElement(
       Attributes dicom, int tag, String privateCreatorID, Date[] defaultValue) {
     if (dicom == null || !dicom.containsValue(tag)) {
       return defaultValue;
     }
-    Date[] val = dicom.getDates(privateCreatorID, tag);
-    return (val == null || val.length == 0) ? defaultValue : val;
+    var values = dicom.getDates(privateCreatorID, tag);
+    return (values == null || values.length == 0) ? defaultValue : values;
   }
 
   /**
@@ -406,7 +382,7 @@ public class DicomUtils {
     }
 
     if (computeOnlyIfNull) {
-      String existingAge = dicom.getString(privateCreatorID, tag, defaultValue);
+      var existingAge = dicom.getString(privateCreatorID, tag, defaultValue);
       if (StringUtil.hasText(existingAge)) {
         return existingAge;
       }
@@ -415,19 +391,12 @@ public class DicomUtils {
   }
 
   private static String calculateAgeFromDates(Attributes dicom) {
-    Date studyDate =
-        findFirstAvailableDate(
-            dicom,
-            Tag.ContentDate,
-            Tag.AcquisitionDate,
-            Tag.DateOfSecondaryCapture,
-            Tag.SeriesDate,
-            Tag.StudyDate);
+    var studyDate = findFirstAvailableDate(dicom, STUDY_DATE_TAGS);
 
     if (studyDate == null) {
       return null;
     }
-    Date birthDate = dicom.getDate(Tag.PatientBirthDate);
+    var birthDate = dicom.getDate(Tag.PatientBirthDate);
     if (birthDate == null) {
       return null;
     }
@@ -436,8 +405,8 @@ public class DicomUtils {
   }
 
   private static Date findFirstAvailableDate(Attributes dicom, int... tagIds) {
-    for (int tagId : tagIds) {
-      Date date = dicom.getDate(tagId);
+    for (var tagId : tagIds) {
+      var date = dicom.getDate(tagId);
       if (date != null) {
         return date;
       }
@@ -455,41 +424,26 @@ public class DicomUtils {
    * @throws NullPointerException if either date is null
    */
   public static String getPeriod(LocalDate first, LocalDate last) {
-    Objects.requireNonNull(first);
-    Objects.requireNonNull(last);
+    Objects.requireNonNull(first, "First date cannot be null");
+    Objects.requireNonNull(last, "Last date cannot be null");
 
-    long years = ChronoUnit.YEARS.between(first, last);
+    var years = ChronoUnit.YEARS.between(first, last);
     if (years >= 2) {
-      return String.format("%03dY", years);
+      return "%03dY".formatted(years);
     }
-    long months = ChronoUnit.MONTHS.between(first, last);
+    var months = ChronoUnit.MONTHS.between(first, last);
     if (months >= 2) {
-      return String.format("%03dM", months);
+      return "%03dM".formatted(months);
     }
-    return String.format("%03dD", ChronoUnit.DAYS.between(first, last));
+    return "%03dD".formatted(ChronoUnit.DAYS.between(first, last));
   }
 
-  /**
-   * Extracts a float value from a DICOM element.
-   *
-   * @param dicom the DICOM attributes
-   * @param tag the DICOM tag
-   * @param defaultValue the default value to return if not present or parsing fails
-   * @return the float value or default value
-   */
+  /** Extracts a float value from a DICOM element. */
   public static Float getFloatFromDicomElement(Attributes dicom, int tag, Float defaultValue) {
     return getFloatFromDicomElement(dicom, tag, null, defaultValue);
   }
 
-  /**
-   * Extracts a float value from a DICOM element with private creator ID.
-   *
-   * @param dicom the DICOM attributes
-   * @param tag the DICOM tag
-   * @param privateCreatorID the private creator ID (can be null)
-   * @param defaultValue the default value to return if not present or parsing fails
-   * @return the float value or default value
-   */
+  /** Extracts a float value from a DICOM element with private creator ID. */
   public static Float getFloatFromDicomElement(
       Attributes dicom, int tag, String privateCreatorID, Float defaultValue) {
     if (dicom == null || !dicom.containsValue(tag)) {
@@ -502,28 +456,13 @@ public class DicomUtils {
         "Float");
   }
 
-  /**
-   * Extracts an integer value from a DICOM element.
-   *
-   * @param dicom the DICOM attributes
-   * @param tag the DICOM tag
-   * @param defaultValue the default value to return if not present or parsing fails
-   * @return the integer value or default value
-   */
+  /** Extracts an integer value from a DICOM element. */
   public static Integer getIntegerFromDicomElement(
       Attributes dicom, int tag, Integer defaultValue) {
     return getIntegerFromDicomElement(dicom, tag, null, defaultValue);
   }
 
-  /**
-   * Extracts an integer value from a DICOM element with private creator ID.
-   *
-   * @param dicom the DICOM attributes
-   * @param tag the DICOM tag
-   * @param privateCreatorID the private creator ID (can be null)
-   * @param defaultValue the default value to return if not present or parsing fails
-   * @return the integer value or default value
-   */
+  /** Extracts an integer value from a DICOM element with private creator ID. */
   public static Integer getIntegerFromDicomElement(
       Attributes dicom, int tag, String privateCreatorID, Integer defaultValue) {
     if (dicom == null || !dicom.containsValue(tag)) {
@@ -536,27 +475,12 @@ public class DicomUtils {
         "Integer");
   }
 
-  /**
-   * Extracts a double value from a DICOM element.
-   *
-   * @param dicom the DICOM attributes
-   * @param tag the DICOM tag
-   * @param defaultValue the default value to return if not present or parsing fails
-   * @return the double value or default value
-   */
+  /** Extracts a double value from a DICOM element. */
   public static Double getDoubleFromDicomElement(Attributes dicom, int tag, Double defaultValue) {
     return getDoubleFromDicomElement(dicom, tag, null, defaultValue);
   }
 
-  /**
-   * Extracts a double value from a DICOM element with private creator ID.
-   *
-   * @param dicom the DICOM attributes
-   * @param tag the DICOM tag
-   * @param privateCreatorID the private creator ID (can be null)
-   * @param defaultValue the default value to return if not present or parsing fails
-   * @return the double value or default value
-   */
+  /** Extracts a double value from a DICOM element with private creator ID. */
   public static Double getDoubleFromDicomElement(
       Attributes dicom, int tag, String privateCreatorID, Double defaultValue) {
     if (dicom == null || !dicom.containsValue(tag)) {
@@ -569,27 +493,12 @@ public class DicomUtils {
         "Double");
   }
 
-  /**
-   * Extracts an integer array from a DICOM element.
-   *
-   * @param dicom the DICOM attributes
-   * @param tag the DICOM tag
-   * @param defaultValue the default value to return if not present or parsing fails
-   * @return the integer array or default value
-   */
+  /** Extracts an integer array from a DICOM element. */
   public static int[] getIntArrayFromDicomElement(Attributes dicom, int tag, int[] defaultValue) {
     return getIntArrayFromDicomElement(dicom, tag, null, defaultValue);
   }
 
-  /**
-   * Extracts an integer array from a DICOM element with private creator ID.
-   *
-   * @param dicom the DICOM attributes
-   * @param tag the DICOM tag
-   * @param privateCreatorID the private creator ID (can be null)
-   * @param defaultValue the default value to return if not present or parsing fails
-   * @return the integer array or default value
-   */
+  /** Extracts an integer array from a DICOM element with private creator ID. */
   public static int[] getIntArrayFromDicomElement(
       Attributes dicom, int tag, String privateCreatorID, int[] defaultValue) {
     if (dicom == null || !dicom.containsValue(tag)) {
@@ -598,28 +507,13 @@ public class DicomUtils {
     return parseArrayValue(() -> dicom.getInts(privateCreatorID, tag), defaultValue, tag, "int[]");
   }
 
-  /**
-   * Extracts a float array from a DICOM element.
-   *
-   * @param dicom the DICOM attributes
-   * @param tag the DICOM tag
-   * @param defaultValue the default value to return if not present or parsing fails
-   * @return the float array or default value
-   */
+  /** Extracts a float array from a DICOM element. */
   public static float[] getFloatArrayFromDicomElement(
       Attributes dicom, int tag, float[] defaultValue) {
     return getFloatArrayFromDicomElement(dicom, tag, null, defaultValue);
   }
 
-  /**
-   * Extracts a float array from a DICOM element with private creator ID.
-   *
-   * @param dicom the DICOM attributes
-   * @param tag the DICOM tag
-   * @param privateCreatorID the private creator ID (can be null)
-   * @param defaultValue the default value to return if not present or parsing fails
-   * @return the float array or default value
-   */
+  /** Extracts a float array from a DICOM element with private creator ID. */
   public static float[] getFloatArrayFromDicomElement(
       Attributes dicom, int tag, String privateCreatorID, float[] defaultValue) {
     if (dicom == null || !dicom.containsValue(tag)) {
@@ -629,28 +523,13 @@ public class DicomUtils {
         () -> dicom.getFloats(privateCreatorID, tag), defaultValue, tag, "float[]");
   }
 
-  /**
-   * Extracts a double array from a DICOM element.
-   *
-   * @param dicom the DICOM attributes
-   * @param tag the DICOM tag
-   * @param defaultValue the default value to return if not present or parsing fails
-   * @return the double array or default value
-   */
+  /** Extracts a double array from a DICOM element. */
   public static double[] getDoubleArrayFromDicomElement(
       Attributes dicom, int tag, double[] defaultValue) {
     return getDoubleArrayFromDicomElement(dicom, tag, null, defaultValue);
   }
 
-  /**
-   * Extracts a double array from a DICOM element with private creator ID.
-   *
-   * @param dicom the DICOM attributes
-   * @param tag the DICOM tag
-   * @param privateCreatorID the private creator ID (can be null)
-   * @param defaultValue the default value to return if not present or parsing fails
-   * @return the double array or default value
-   */
+  /** Extracts a double array from a DICOM element with private creator ID. */
   public static double[] getDoubleArrayFromDicomElement(
       Attributes dicom, int tag, String privateCreatorID, double[] defaultValue) {
     if (dicom == null || !dicom.containsValue(tag)) {
@@ -665,7 +544,7 @@ public class DicomUtils {
     try {
       return supplier.get();
     } catch (NumberFormatException e) {
-      LOGGER.error("Cannot parse {} of {}: {} ", type, TagUtils.toString(tag), e.getMessage());
+      LOGGER.error("Cannot parse {} for tag {}: {}", type, TagUtils.toString(tag), e.getMessage());
       return defaultValue;
     }
   }
@@ -673,10 +552,10 @@ public class DicomUtils {
   private static <T> T parseArrayValue(
       ArrayValueSupplier<T> supplier, T defaultValue, int tag, String type) {
     try {
-      T val = supplier.get();
-      return (val != null && Array.getLength(val) != 0) ? val : defaultValue;
+      var value = supplier.get();
+      return (value != null && Array.getLength(value) != 0) ? value : defaultValue;
     } catch (NumberFormatException e) {
-      LOGGER.error("Cannot parse {} of {}: {} ", type, TagUtils.toString(tag), e.getMessage());
+      LOGGER.error("Cannot parse {} for tag {}: {}", type, TagUtils.toString(tag), e.getMessage());
       return defaultValue;
     }
   }
