@@ -12,402 +12,316 @@ package org.dcm4che3.img.stream;
 import static org.junit.jupiter.api.Assertions.*;
 
 import java.nio.file.Path;
-import java.nio.file.Paths;
+import java.util.stream.IntStream;
 import org.dcm4che3.data.Attributes;
 import org.dcm4che3.data.Tag;
 import org.dcm4che3.data.VR;
-import org.junit.jupiter.api.DisplayName;
+import org.junit.jupiter.api.DisplayNameGeneration;
+import org.junit.jupiter.api.DisplayNameGenerator.ReplaceUnderscores;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.function.Executable;
 import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.CsvSource;
 import org.junit.jupiter.params.provider.ValueSource;
 
+@DisplayNameGeneration(ReplaceUnderscores.class)
 class ExtendSegmentedInputImageStreamTest {
 
   @Nested
-  @DisplayName("Constructor Tests")
-  class ConstructorTests {
+  class Constructor_tests {
 
     @Test
-    @DisplayName("Should create stream with valid parameters")
-    void shouldCreateStreamWithValidParameters() {
-      // Given
-      Path path = Paths.get("test", "image.dcm");
-      long[] positions = {0L, 1024L, 2048L};
-      int[] lengths = {512, 1024, 256};
-      ImageDescriptor descriptor = createBasicImageDescriptor();
+    void should_create_stream_with_valid_parameters() {
+      var path = Path.of("test", "image.dcm");
+      var positions = new long[] {0L, 1024L, 2048L};
+      var lengths = new int[] {512, 1024, 256};
+      var descriptor = createBasicImageDescriptor();
 
-      // When
-      ExtendSegmentedInputImageStream stream =
-          new ExtendSegmentedInputImageStream(path, positions, lengths, descriptor);
+      var stream = new ExtendSegmentedInputImageStream(path, positions, lengths, descriptor);
 
-      // Then
-      assertEquals(path, stream.path());
-      assertArrayEquals(positions, stream.segmentPositions());
-      assertArrayEquals(lengths, stream.segmentLengths());
-      assertEquals(descriptor, stream.imageDescriptor());
+      assertAll(
+          () -> assertEquals(path, stream.path()),
+          () -> assertArrayEquals(positions, stream.segmentPositions()),
+          () -> assertArrayEquals(lengths, stream.segmentLengths()),
+          () -> assertEquals(descriptor, stream.imageDescriptor()));
     }
 
     @Test
-    @DisplayName("Should create stream with single segment")
-    void shouldCreateStreamWithSingleSegment() {
-      // Given
-      Path path = Paths.get("single", "segment.dcm");
-      long[] positions = {100L};
-      int[] lengths = {2048};
-      ImageDescriptor descriptor = createMultiFrameImageDescriptor();
+    void should_create_stream_with_single_segment() {
+      var path = Path.of("single", "segment.dcm");
+      var positions = new long[] {100L};
+      var lengths = new int[] {2048};
+      var descriptor = createMultiFrameImageDescriptor();
 
-      // When
-      ExtendSegmentedInputImageStream stream =
-          new ExtendSegmentedInputImageStream(path, positions, lengths, descriptor);
+      var stream = new ExtendSegmentedInputImageStream(path, positions, lengths, descriptor);
 
-      // Then
-      assertEquals(1, stream.getSegmentCount());
-      assertEquals(2048L, stream.getTotalLength());
+      assertAll(
+          () -> assertEquals(1, stream.getSegmentCount()),
+          () -> assertEquals(2048L, stream.getTotalLength()));
+    }
+
+    @ParameterizedTest
+    @CsvSource(
+        textBlock =
+            """
+                    # field,                errorMessage
+                    path,                   'Path cannot be null'
+                    segmentPositions,       'Segment positions cannot be null'
+                    segmentLengths,         'Segment lengths cannot be null'
+                    imageDescriptor,        'Image descriptor cannot be null'
+                    """)
+    void should_throw_exception_for_null_parameters(String field, String errorMessage) {
+      var path = Path.of("test.dcm");
+      var positions = new long[] {0L};
+      var lengths = new int[] {512};
+      var descriptor = createBasicImageDescriptor();
+
+      Executable executable =
+          switch (field) {
+            case "path" ->
+                () -> new ExtendSegmentedInputImageStream(null, positions, lengths, descriptor);
+            case "segmentPositions" ->
+                () -> new ExtendSegmentedInputImageStream(path, null, lengths, descriptor);
+            case "segmentLengths" ->
+                () -> new ExtendSegmentedInputImageStream(path, positions, null, descriptor);
+            case "imageDescriptor" ->
+                () -> new ExtendSegmentedInputImageStream(path, positions, lengths, null);
+            default -> throw new IllegalArgumentException("Unknown field: " + field);
+          };
+
+      var exception = assertThrows(NullPointerException.class, executable);
+      assertEquals(errorMessage, exception.getMessage());
     }
 
     @Test
-    @DisplayName("Should throw NullPointerException for null path")
-    void shouldThrowExceptionForNullPath() {
-      // Given
-      long[] positions = {0L};
-      int[] lengths = {512};
-      ImageDescriptor descriptor = createBasicImageDescriptor();
+    void should_throw_exception_for_mismatched_array_lengths() {
+      var path = Path.of("test.dcm");
+      var positions = new long[] {0L, 1024L};
+      var lengths = new int[] {512};
+      var descriptor = createBasicImageDescriptor();
 
-      // When & Then
-      NullPointerException exception =
-          assertThrows(
-              NullPointerException.class,
-              () -> new ExtendSegmentedInputImageStream(null, positions, lengths, descriptor));
-      assertEquals("Path cannot be null", exception.getMessage());
-    }
-
-    @Test
-    @DisplayName("Should throw NullPointerException for null segment positions")
-    void shouldThrowExceptionForNullSegmentPositions() {
-      // Given
-      Path path = Paths.get("test.dcm");
-      int[] lengths = {512};
-      ImageDescriptor descriptor = createBasicImageDescriptor();
-
-      // When & Then
-      NullPointerException exception =
-          assertThrows(
-              NullPointerException.class,
-              () -> new ExtendSegmentedInputImageStream(path, null, lengths, descriptor));
-      assertEquals("Segment positions cannot be null", exception.getMessage());
-    }
-
-    @Test
-    @DisplayName("Should throw NullPointerException for null segment lengths")
-    void shouldThrowExceptionForNullSegmentLengths() {
-      // Given
-      Path path = Paths.get("test.dcm");
-      long[] positions = {0L};
-      ImageDescriptor descriptor = createBasicImageDescriptor();
-
-      // When & Then
-      NullPointerException exception =
-          assertThrows(
-              NullPointerException.class,
-              () -> new ExtendSegmentedInputImageStream(path, positions, null, descriptor));
-      assertEquals("Segment lengths cannot be null", exception.getMessage());
-    }
-
-    @Test
-    @DisplayName("Should throw NullPointerException for null image descriptor")
-    void shouldThrowExceptionForNullImageDescriptor() {
-      // Given
-      Path path = Paths.get("test.dcm");
-      long[] positions = {0L};
-      int[] lengths = {512};
-
-      // When & Then
-      NullPointerException exception =
-          assertThrows(
-              NullPointerException.class,
-              () -> new ExtendSegmentedInputImageStream(path, positions, lengths, null));
-      assertEquals("Image descriptor cannot be null", exception.getMessage());
-    }
-
-    @Test
-    @DisplayName("Should throw IllegalArgumentException for mismatched array lengths")
-    void shouldThrowExceptionForMismatchedArrayLengths() {
-      // Given
-      Path path = Paths.get("test.dcm");
-      long[] positions = {0L, 1024L};
-      int[] lengths = {512};
-      ImageDescriptor descriptor = createBasicImageDescriptor();
-
-      // When & Then
-      IllegalArgumentException exception =
+      var exception =
           assertThrows(
               IllegalArgumentException.class,
               () -> new ExtendSegmentedInputImageStream(path, positions, lengths, descriptor));
+
       assertEquals(
           "Segment positions and lengths arrays must have the same length", exception.getMessage());
     }
 
     @Test
-    @DisplayName("Should throw IllegalArgumentException for empty arrays")
-    void shouldThrowExceptionForEmptyArrays() {
-      // Given
-      Path path = Paths.get("test.dcm");
-      long[] positions = {};
-      int[] lengths = {};
-      ImageDescriptor descriptor = createBasicImageDescriptor();
+    void should_throw_exception_for_empty_arrays() {
+      var path = Path.of("test.dcm");
+      var positions = new long[] {};
+      var lengths = new int[] {};
+      var descriptor = createBasicImageDescriptor();
 
-      // When & Then
-      IllegalArgumentException exception =
+      var exception =
           assertThrows(
               IllegalArgumentException.class,
               () -> new ExtendSegmentedInputImageStream(path, positions, lengths, descriptor));
+
       assertEquals("At least one segment must be defined", exception.getMessage());
     }
 
     @ParameterizedTest
     @ValueSource(longs = {-1L, -100L, -1024L})
-    @DisplayName("Should throw IllegalArgumentException for negative positions")
-    void shouldThrowExceptionForNegativePositions(long negativePosition) {
-      // Given
-      Path path = Paths.get("test.dcm");
-      long[] positions = {0L, negativePosition};
-      int[] lengths = {512, 1024};
-      ImageDescriptor descriptor = createBasicImageDescriptor();
+    void should_throw_exception_for_negative_positions(long negativePosition) {
+      var path = Path.of("test.dcm");
+      var positions = new long[] {0L, negativePosition};
+      var lengths = new int[] {512, 1024};
+      var descriptor = createBasicImageDescriptor();
 
-      // When & Then
-      IllegalArgumentException exception =
+      var exception =
           assertThrows(
               IllegalArgumentException.class,
               () -> new ExtendSegmentedInputImageStream(path, positions, lengths, descriptor));
+
       assertTrue(exception.getMessage().contains("Segment position cannot be negative"));
     }
 
     @ParameterizedTest
     @ValueSource(ints = {0, -1, -100})
-    @DisplayName("Should throw IllegalArgumentException for non-positive lengths")
-    void shouldThrowExceptionForNonPositiveLengths(int invalidLength) {
-      // Given
-      Path path = Paths.get("test.dcm");
-      long[] positions = {0L, 1024L};
-      int[] lengths = {512, invalidLength};
-      ImageDescriptor descriptor = createBasicImageDescriptor();
+    void should_throw_exception_for_non_positive_lengths(int invalidLength) {
+      var path = Path.of("test.dcm");
+      var positions = new long[] {0L, 1024L};
+      var lengths = new int[] {512, invalidLength};
+      var descriptor = createBasicImageDescriptor();
 
-      // When & Then
-      IllegalArgumentException exception =
+      var exception =
           assertThrows(
               IllegalArgumentException.class,
               () -> new ExtendSegmentedInputImageStream(path, positions, lengths, descriptor));
+
       assertTrue(exception.getMessage().contains("Segment length must be positive"));
     }
   }
 
   @Nested
-  @DisplayName("Method Tests")
-  class MethodTests {
+  class Method_tests {
 
     @Test
-    @DisplayName("Should return correct segment count")
-    void shouldReturnCorrectSegmentCount() {
-      // Given
-      ExtendSegmentedInputImageStream stream = createStreamWithMultipleSegments();
-
-      // When & Then
+    void should_return_correct_segment_count() {
+      var stream = createStreamWithMultipleSegments();
       assertEquals(4, stream.getSegmentCount());
     }
 
     @Test
-    @DisplayName("Should calculate correct total length")
-    void shouldCalculateCorrectTotalLength() {
-      // Given
-      long[] positions = {0L, 512L, 1536L};
-      int[] lengths = {512, 1024, 256};
-      ExtendSegmentedInputImageStream stream =
+    void should_calculate_correct_total_length() {
+      var positions = new long[] {0L, 512L, 1536L};
+      var lengths = new int[] {512, 1024, 256};
+      var stream =
           new ExtendSegmentedInputImageStream(
-              Paths.get("test.dcm"), positions, lengths, createBasicImageDescriptor());
+              Path.of("test.dcm"), positions, lengths, createBasicImageDescriptor());
 
-      // When & Then
       assertEquals(1792L, stream.getTotalLength()); // 512 + 1024 + 256
     }
 
     @Test
-    @DisplayName("Should return defensive copies of arrays")
-    void shouldReturnDefensiveCopiesOfArrays() {
-      // Given
-      long[] originalPositions = {0L, 1024L};
-      int[] originalLengths = {512, 1024};
-      ExtendSegmentedInputImageStream stream =
+    void should_return_defensive_copies_of_arrays() {
+      var originalPositions = new long[] {0L, 1024L};
+      var originalLengths = new int[] {512, 1024};
+      var stream =
           new ExtendSegmentedInputImageStream(
-              Paths.get("test.dcm"),
+              Path.of("test.dcm"),
               originalPositions,
               originalLengths,
               createBasicImageDescriptor());
 
-      // When
-      long[] returnedPositions = stream.segmentPositions();
-      int[] returnedLengths = stream.segmentLengths();
+      var returnedPositions = stream.segmentPositions();
+      var returnedLengths = stream.segmentLengths();
 
-      // Modify the returned arrays
+      // Modify returned arrays
       returnedPositions[0] = 999L;
       returnedLengths[0] = 999;
 
-      // Then - original data should be unchanged
-      assertEquals(0L, stream.segmentPositions()[0]);
-      assertEquals(512, stream.segmentLengths()[0]);
+      // Original data should be unchanged
+      assertAll(
+          () -> assertEquals(0L, stream.segmentPositions()[0]),
+          () -> assertEquals(512, stream.segmentLengths()[0]));
     }
   }
 
   @Nested
-  @DisplayName("Equals and HashCode Tests")
-  class EqualsAndHashCodeTests {
+  class Equals_and_hashCode_tests {
 
     @Test
-    @DisplayName("Should be equal to itself")
-    void shouldBeEqualToItself() {
-      // Given
-      ExtendSegmentedInputImageStream stream = createStreamWithMultipleSegments();
+    void should_be_equal_to_itself() {
+      var stream = createStreamWithMultipleSegments();
 
-      // When & Then
-      assertEquals(stream, stream);
-      assertEquals(stream.hashCode(), stream.hashCode());
+      assertAll(
+          () -> assertEquals(stream, stream),
+          () -> assertEquals(stream.hashCode(), stream.hashCode()));
     }
 
     @Test
-    @DisplayName("Should be equal when all fields match")
-    void shouldBeEqualWhenAllFieldsMatch() {
-      // Given
-      Path path = Paths.get("identical", "path.dcm");
-      long[] positions = {100L, 200L, 300L};
-      int[] lengths = {50, 100, 75};
-      ImageDescriptor descriptor = createBasicImageDescriptor();
+    void should_be_equal_when_all_fields_match() {
+      var path = Path.of("identical", "path.dcm");
+      var positions = new long[] {100L, 200L, 300L};
+      var lengths = new int[] {50, 100, 75};
+      var descriptor = createBasicImageDescriptor();
 
-      ExtendSegmentedInputImageStream stream1 =
-          new ExtendSegmentedInputImageStream(path, positions, lengths, descriptor);
-      ExtendSegmentedInputImageStream stream2 =
+      var stream1 = new ExtendSegmentedInputImageStream(path, positions, lengths, descriptor);
+      var stream2 =
           new ExtendSegmentedInputImageStream(path, positions.clone(), lengths.clone(), descriptor);
 
-      // When & Then
-      assertEquals(stream1, stream2);
-      assertEquals(stream1.hashCode(), stream2.hashCode());
+      assertAll(
+          () -> assertEquals(stream1, stream2),
+          () -> assertEquals(stream1.hashCode(), stream2.hashCode()));
     }
 
     @Test
-    @DisplayName("Should not be equal to null")
-    void shouldNotBeEqualToNull() {
-      // Given
-      ExtendSegmentedInputImageStream stream = createStreamWithMultipleSegments();
+    void should_not_be_equal_to_null_or_different_class() {
+      var stream = createStreamWithMultipleSegments();
 
-      // When & Then
-      assertNotEquals(stream, null);
+      assertAll(
+          () -> assertNotEquals(null, stream),
+          () -> assertNotEquals("not a stream", stream),
+          () -> assertNotEquals(new Object(), stream));
     }
 
     @Test
-    @DisplayName("Should not be equal to different class")
-    void shouldNotBeEqualToDifferentClass() {
-      // Given
-      ExtendSegmentedInputImageStream stream = createStreamWithMultipleSegments();
+    void should_not_be_equal_when_paths_differ() {
+      var positions = new long[] {0L, 1024L};
+      var lengths = new int[] {512, 1024};
+      var descriptor = createBasicImageDescriptor();
 
-      // When & Then
-      assertNotEquals(stream, "not a stream");
-      assertNotEquals(stream, new Object());
+      var stream1 =
+          new ExtendSegmentedInputImageStream(Path.of("path1.dcm"), positions, lengths, descriptor);
+      var stream2 =
+          new ExtendSegmentedInputImageStream(Path.of("path2.dcm"), positions, lengths, descriptor);
+
+      assertAll(
+          () -> assertNotEquals(stream1, stream2),
+          () -> assertNotEquals(stream1.hashCode(), stream2.hashCode()));
     }
 
     @Test
-    @DisplayName("Should not be equal when paths differ")
-    void shouldNotBeEqualWhenPathsDiffer() {
-      // Given
-      long[] positions = {0L, 1024L};
-      int[] lengths = {512, 1024};
-      ImageDescriptor descriptor = createBasicImageDescriptor();
+    void should_not_be_equal_when_segment_positions_differ() {
+      var path = Path.of("same.dcm");
+      var lengths = new int[] {512, 1024};
+      var descriptor = createBasicImageDescriptor();
 
-      ExtendSegmentedInputImageStream stream1 =
-          new ExtendSegmentedInputImageStream(
-              Paths.get("path1.dcm"), positions, lengths, descriptor);
-      ExtendSegmentedInputImageStream stream2 =
-          new ExtendSegmentedInputImageStream(
-              Paths.get("path2.dcm"), positions, lengths, descriptor);
-
-      // When & Then
-      assertNotEquals(stream1, stream2);
-      assertNotEquals(stream1.hashCode(), stream2.hashCode());
-    }
-
-    @Test
-    @DisplayName("Should not be equal when segment positions differ")
-    void shouldNotBeEqualWhenSegmentPositionsDiffer() {
-      // Given
-      Path path = Paths.get("same.dcm");
-      int[] lengths = {512, 1024};
-      ImageDescriptor descriptor = createBasicImageDescriptor();
-
-      ExtendSegmentedInputImageStream stream1 =
+      var stream1 =
           new ExtendSegmentedInputImageStream(path, new long[] {0L, 1024L}, lengths, descriptor);
-      ExtendSegmentedInputImageStream stream2 =
+      var stream2 =
           new ExtendSegmentedInputImageStream(path, new long[] {100L, 1124L}, lengths, descriptor);
 
-      // When & Then
-      assertNotEquals(stream1, stream2);
-      assertNotEquals(stream1.hashCode(), stream2.hashCode());
+      assertAll(
+          () -> assertNotEquals(stream1, stream2),
+          () -> assertNotEquals(stream1.hashCode(), stream2.hashCode()));
     }
 
     @Test
-    @DisplayName("Should not be equal when segment lengths differ")
-    void shouldNotBeEqualWhenSegmentLengthsDiffer() {
-      // Given
-      Path path = Paths.get("same.dcm");
-      long[] positions = {0L, 1024L};
-      ImageDescriptor descriptor = createBasicImageDescriptor();
+    void should_not_be_equal_when_segment_lengths_differ() {
+      var path = Path.of("same.dcm");
+      var positions = new long[] {0L, 1024L};
+      var descriptor = createBasicImageDescriptor();
 
-      ExtendSegmentedInputImageStream stream1 =
+      var stream1 =
           new ExtendSegmentedInputImageStream(path, positions, new int[] {512, 1024}, descriptor);
-      ExtendSegmentedInputImageStream stream2 =
+      var stream2 =
           new ExtendSegmentedInputImageStream(path, positions, new int[] {256, 2048}, descriptor);
 
-      // When & Then
-      assertNotEquals(stream1, stream2);
-      assertNotEquals(stream1.hashCode(), stream2.hashCode());
+      assertAll(
+          () -> assertNotEquals(stream1, stream2),
+          () -> assertNotEquals(stream1.hashCode(), stream2.hashCode()));
     }
 
     @Test
-    @DisplayName("Should not be equal when image descriptors differ")
-    void shouldNotBeEqualWhenImageDescriptorsDiffer() {
-      // Given
-      Path path = Paths.get("same.dcm");
-      long[] positions = {0L, 1024L};
-      int[] lengths = {512, 1024};
+    void should_not_be_equal_when_image_descriptors_differ() {
+      var path = Path.of("same.dcm");
+      var positions = new long[] {0L, 1024L};
+      var lengths = new int[] {512, 1024};
 
-      ExtendSegmentedInputImageStream stream1 =
+      var stream1 =
           new ExtendSegmentedInputImageStream(
               path, positions, lengths, createBasicImageDescriptor());
-      ExtendSegmentedInputImageStream stream2 =
+      var stream2 =
           new ExtendSegmentedInputImageStream(
               path, positions, lengths, createMultiFrameImageDescriptor());
 
-      // When & Then
-      assertNotEquals(stream1, stream2);
-      assertNotEquals(stream1.hashCode(), stream2.hashCode());
+      assertAll(
+          () -> assertNotEquals(stream1, stream2),
+          () -> assertNotEquals(stream1.hashCode(), stream2.hashCode()));
     }
   }
 
   @Nested
-  @DisplayName("ToString Tests")
-  class ToStringTests {
+  class ToString_tests {
 
     @Test
-    @DisplayName("Should contain essential information in string representation")
-    void shouldContainEssentialInformationInStringRepresentation() {
-      // Given
-      Path path = Paths.get("test", "data", "image.dcm");
-      long[] positions = {0L, 1024L, 2048L};
-      int[] lengths = {512, 1024, 256};
-      ExtendSegmentedInputImageStream stream =
+    void should_contain_essential_information_in_string_representation() {
+      var path = Path.of("test", "data", "image.dcm");
+      var positions = new long[] {0L, 1024L, 2048L};
+      var lengths = new int[] {512, 1024, 256};
+      var stream =
           new ExtendSegmentedInputImageStream(
               path, positions, lengths, createBasicImageDescriptor());
 
-      // When
-      String toString = stream.toString();
+      var toString = stream.toString();
 
-      // Then
       assertAll(
           () -> assertTrue(toString.contains("ExtendSegmentedInputImageStream")),
           () -> assertTrue(toString.contains("image.dcm")),
@@ -416,20 +330,16 @@ class ExtendSegmentedInputImageStreamTest {
     }
 
     @Test
-    @DisplayName("Should format single segment correctly in string representation")
-    void shouldFormatSingleSegmentCorrectlyInStringRepresentation() {
-      // Given
-      ExtendSegmentedInputImageStream stream =
+    void should_format_single_segment_correctly() {
+      var stream =
           new ExtendSegmentedInputImageStream(
-              Paths.get("single.dcm"),
+              Path.of("single.dcm"),
               new long[] {0L},
               new int[] {1024},
               createBasicImageDescriptor());
 
-      // When
-      String toString = stream.toString();
+      var toString = stream.toString();
 
-      // Then
       assertAll(
           () -> assertTrue(toString.contains("single.dcm")),
           () -> assertTrue(toString.contains("segments=1")),
@@ -438,69 +348,56 @@ class ExtendSegmentedInputImageStreamTest {
   }
 
   @Nested
-  @DisplayName("Edge Cases and Boundary Tests")
-  class EdgeCasesAndBoundaryTests {
+  class Edge_cases_and_boundary_tests {
 
     @Test
-    @DisplayName("Should handle maximum long values for positions")
-    void shouldHandleMaximumLongValuesForPositions() {
-      // Given
-      Path path = Paths.get("large.dcm");
-      long[] positions = {Long.MAX_VALUE - 1000, Long.MAX_VALUE - 500};
-      int[] lengths = {500, 500};
-      ImageDescriptor descriptor = createBasicImageDescriptor();
+    void should_handle_maximum_long_values_for_positions() {
+      var path = Path.of("large.dcm");
+      var positions = new long[] {Long.MAX_VALUE - 1000, Long.MAX_VALUE - 500};
+      var lengths = new int[] {500, 500};
+      var descriptor = createBasicImageDescriptor();
 
-      // When & Then
       assertDoesNotThrow(
           () -> new ExtendSegmentedInputImageStream(path, positions, lengths, descriptor));
     }
 
     @Test
-    @DisplayName("Should handle maximum integer values for lengths")
-    void shouldHandleMaximumIntegerValuesForLengths() {
-      // Given
-      Path path = Paths.get("huge.dcm");
-      long[] positions = {0L, Integer.MAX_VALUE};
-      int[] lengths = {Integer.MAX_VALUE, 1000};
-      ImageDescriptor descriptor = createBasicImageDescriptor();
+    void should_handle_maximum_integer_values_for_lengths() {
+      var path = Path.of("huge.dcm");
+      var positions = new long[] {0L, Integer.MAX_VALUE};
+      var lengths = new int[] {Integer.MAX_VALUE, 1000};
+      var descriptor = createBasicImageDescriptor();
 
-      // When & Then
       assertDoesNotThrow(
           () -> new ExtendSegmentedInputImageStream(path, positions, lengths, descriptor));
     }
 
     @Test
-    @DisplayName("Should handle large number of segments")
-    void shouldHandleLargeNumberOfSegments() {
-      // Given
-      int segmentCount = 1000;
-      Path path = Paths.get("many-segments.dcm");
-      long[] positions = new long[segmentCount];
-      int[] lengths = new int[segmentCount];
+    void should_handle_large_number_of_segments() {
+      var segmentCount = 1000;
+      var path = Path.of("many-segments.dcm");
+      var positions = new long[segmentCount];
+      var lengths = new int[segmentCount];
 
-      for (int i = 0; i < segmentCount; i++) {
-        positions[i] = i * 1024L;
-        lengths[i] = 1024;
-      }
+      IntStream.range(0, segmentCount)
+          .forEach(
+              i -> {
+                positions[i] = i * 1024L;
+                lengths[i] = 1024;
+              });
 
-      ImageDescriptor descriptor = createBasicImageDescriptor();
+      var descriptor = createBasicImageDescriptor();
+      var stream = new ExtendSegmentedInputImageStream(path, positions, lengths, descriptor);
 
-      // When
-      ExtendSegmentedInputImageStream stream =
-          new ExtendSegmentedInputImageStream(path, positions, lengths, descriptor);
-
-      // When & Then
       assertAll(
           () -> assertEquals(segmentCount, stream.getSegmentCount()),
           () -> assertEquals(segmentCount * 1024L, stream.getTotalLength()));
     }
 
     @Test
-    @DisplayName("Should handle complex path structures")
-    void shouldHandleComplexPathStructures() {
-      // Given
-      Path complexPath =
-          Paths.get(
+    void should_handle_complex_path_structures() {
+      var complexPath =
+          Path.of(
               "very",
               "deep",
               "directory",
@@ -508,33 +405,30 @@ class ExtendSegmentedInputImageStreamTest {
               "with",
               "spaces in name",
               "file name with spaces.dcm");
-      long[] positions = {0L};
-      int[] lengths = {1024};
-      ImageDescriptor descriptor = createBasicImageDescriptor();
+      var positions = new long[] {0L};
+      var lengths = new int[] {1024};
+      var descriptor = createBasicImageDescriptor();
 
-      // When
-      ExtendSegmentedInputImageStream stream =
-          new ExtendSegmentedInputImageStream(complexPath, positions, lengths, descriptor);
+      var stream = new ExtendSegmentedInputImageStream(complexPath, positions, lengths, descriptor);
 
-      // Then
-      assertEquals(complexPath, stream.path());
-      assertTrue(stream.toString().contains("file name with spaces.dcm"));
+      assertAll(
+          () -> assertEquals(complexPath, stream.path()),
+          () -> assertTrue(stream.toString().contains("file name with spaces.dcm")));
     }
   }
 
-  // Helper methods for creating test data
+  // Test data factory methods
 
   private ExtendSegmentedInputImageStream createStreamWithMultipleSegments() {
-    Path path = Paths.get("multi", "segment.dcm");
-    long[] positions = {0L, 512L, 1024L, 2048L};
-    int[] lengths = {512, 512, 1024, 256};
-    ImageDescriptor descriptor = createBasicImageDescriptor();
-
-    return new ExtendSegmentedInputImageStream(path, positions, lengths, descriptor);
+    return new ExtendSegmentedInputImageStream(
+        Path.of("multi", "segment.dcm"),
+        new long[] {0L, 512L, 1024L, 2048L},
+        new int[] {512, 512, 1024, 256},
+        createBasicImageDescriptor());
   }
 
   private ImageDescriptor createBasicImageDescriptor() {
-    Attributes attributes = new Attributes();
+    var attributes = new Attributes();
     attributes.setInt(Tag.Rows, VR.US, 256);
     attributes.setInt(Tag.Columns, VR.US, 256);
     attributes.setInt(Tag.SamplesPerPixel, VR.US, 1);
@@ -547,7 +441,7 @@ class ExtendSegmentedInputImageStreamTest {
   }
 
   private ImageDescriptor createMultiFrameImageDescriptor() {
-    Attributes attributes = new Attributes();
+    var attributes = new Attributes();
     attributes.setInt(Tag.Rows, VR.US, 512);
     attributes.setInt(Tag.Columns, VR.US, 512);
     attributes.setInt(Tag.SamplesPerPixel, VR.US, 3);
